# doodle-man

./: ASSIGNMENT.md  Cargo.toml  README.md  auth.html  config.toml
src/: main.rs
src/auth/: mod.rs
src/messages/: mod.rs
src/options/: mod.rs
src/settings/: mod.rs
