[package]
name = "twitch-doodler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
confy = "0.5.1"
dotenv = "0.15.0"
rand = "0.8.5"
reqwest = { version = "0.11.18", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_derive = "1.0.164"
serde_json = "1.0.96"
